# beyond-matmul

./: .gitignore  .mise.toml  AGENTS.md  README.md  pyproject.toml
.githooks/: pre-push
benchmarks/: approximation_error_ablation.py  fixed_weight.py  live_conv1d_whisper.py  olmoe_stock_baseline.py  olmoe_stock_profile.py  peft_multi_adapter_serving.py  peft_transformers_lora_inference.py  planner_contract_ablation.py
beyond_matmul/: __init__.py  _linalg.py  analyzer.py  approximations.py  frontend.py  ir.py  planner.py
docs/: benchmark_artifacts.md  completion_audit.md  evidence_matrix.md  frontend_capture.md  handoff_next_layer.md  hardware_backed_production_benchmark_contract.md  ir_spec.md  live_conv1d_benchmark_contract.md  olmoe_tensor_contraction_capstone.md  peft_capstone_benchmark_contract.md  peft_fork_setup.md  peft_low_rank_provenance_design.md  peft_multi_adapter_dense_merge_investigation.md  peft_multi_adapter_serving_benchmark_contract.md  research_outline.md  taxonomy.md  torch_frontend_coverage.md
examples/: adapter_workload_demo.py  case_study_artifacts.py  conv1d_workload_demo.py  fixed_weight_inference_demo.py  torch_coverage_demo.py  torch_fx_frontend_demo.py
scripts/: bootstrap  check_torch_frontend_coverage.py  ci_local
tests/: test_analyzer.py  test_approximation_error_ablation.py  test_benchmark_artifacts.py  test_case_study_artifacts.py  test_ci_local.py  test_fixed_weight_demo.py  test_frontend.py  test_ir_planner.py  test_live_conv1d_whisper.py  test_olmoe_stock_baseline.py  test_olmoe_stock_profile.py  (+4 more)
whitepaper/: main.tex
(+4 files in other folders)
