[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "beyond-matmul"
version = "0.1.0"
description = "Provenance-aware linear operator IR and fixed-weight lowering planner."
readme = "README.md"
requires-python = ">=3.10"
authors = [{ name = "Beyond Matmul Contributors" }]
license = { text = "MIT" }
dependencies = [
    "numpy>=1.24",
    "torch==2.12.1",
]

[project.optional-dependencies]
dev = []

[tool.setuptools.packages.find]
include = ["beyond_matmul*"]
